# GamePython

./: README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
python_venv/: BJ.py  RPS.py  __init__.py  fiche_perso.py
tests/: test_fiche_perso.py
